# insurance_premium

./: Dockerfile  pyproject.toml
.github/workflows/: python-app.yml
src/: infer.py  main.py  model.py  model_lgbm.pkl  pipeline.pkl
tests/: test_infer.py
