[tool.poetry]
name = "insurance-premium"
version = "0.1.0"
description = ""
authors = ["Rex Yang <rex.yang.sh@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["standard"], version = "^0.115.6"}
pydantic = "^2.10.3"
scikit-learn = "1.5.2"
xgboost = "^2.1.3"
numpy = "^2.2.0"
pandas = "^2.2.3"
typing-extensions = "^4.12.2"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
